This this the changelog file for the Pothos GUI toolkit.

Release 0.5.1 (pending)
==========================

- Fix auto-activate when the graph editor not visible
- Layout tweaks for dimension spinbox on DTypeChooser
- Fix DTypeChooser config parsing for keyword options
- Graph editor update activate topology button on toggle
- Fix graph properties panel config options for older Qt

Release 0.5.0 (2017-04-27)
==========================

- Added automatic activate option for saved topologies
- Require 0.5.0 Pothos framework for DocUtil and BlockEval
- Switch over to Qt classes for JSON, time, processes, etc...
- Parameter edit mode to switch between default and line entry
- Finer grained connection management in Topology evaluator
- Support for querying and applying block description overlays

Release 0.4.4 (2017-03-03)
==========================

- Fixed extra context menu when moving objects between pages
- Fixed moving blocks with multiple signal/slot connections
- Disable insert graph widgets menu when no widgets available
- Added missing directory option to the FileEntry edit widget
- Fix editable combo box detection for returnPressed() event

Release 0.4.3 (2017-01-26)
==========================

- Fix possible "drag leave received" warning in GraphDraw
- Fix block tree invalid item drag with older selection
- Fix GraphBlock isPointing when called before update
- Reduce string copying when converting to QByteArray
- Tweak connection name for signal to regular input port

Release 0.4.2 (2016-11-26)
==========================

- Fix affinity zone name changes from using itemText()
- Fixed copy-paste typo for registering the DTypeChooser
- Set POTHOS_SYSLOG_ADDR - optional when its supported
- LoggerDisplay format changes for multi-line messages
- Added missing gif images to Qt resource bundling system
- Keyboard shortcut F6 for activate, F8 for plugin reload

Release 0.4.1 (2016-09-24)
==========================
